add final touches

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -368,3 +368,9 @@
 	journal = {Proceedings of Computer Graphics International Conference, CGI},
 	doi = {10.1109/CGI.2004.1309188}
 }
+@software{openrt,
+  author = {{Sergey Kosov}},
+  title = {OpenRT},
+  url = {https://github.com/Project-10/OpenRT},
+  date = {2021-05-08},
+}
