--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -1316,21 +1316,21 @@ We can explain these variations by the number of ray-primitive intersection test
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{section5/plots/surface_naive_union.png}
-	\caption{Surface plot showing the number of ray-primitive tests on each pixel with $NaiCSG$}
+	\caption{Surface plot showing the number of ray-primitive tests on each pixel with $NaiCSG$.}
 	\label{sec5.1:test_count_naive}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{section5/plots/surface_bin_union.png}
-	\caption{Surface plot showing the number of ray-primitive tests on each pixel with $BinCSG$}
+	\caption{Surface plot showing the number of ray-primitive tests on each pixel with $BinCSG$.}
 	\label{sec5.1:test_count_bin}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{section5/plots/surface_optim_union.png}
-	\caption{Surface plot showing the number of ray-primitive tests on each pixel with $OptimCSG$}
+	\caption{Surface plot showing the number of ray-primitive tests on each pixel with $OptimCSG$.}
 	\label{sec5.1:test_count_optim}
 \end{figure}
 
