--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -374,3 +374,17 @@
   url = {https://github.com/Project-10/OpenRT},
   date = {2021-05-08},
 }
+@article{kd-tree-review,
+author = {Hapala, M. and Havran, V.},
+title = {Review: Kd-tree Traversal Algorithms for Ray Tracing},
+journal = {Computer Graphics Forum},
+volume = {30},
+number = {1},
+pages = {199-213},
+keywords = {kd-tree, ray tracing, traversal, I.3.7 Computer Graphics: Three-Dimensional Graphics and Realism—Ray Tracing},
+doi = {https://doi.org/10.1111/j.1467-8659.2010.01844.x},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1467-8659.2010.01844.x},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1467-8659.2010.01844.x},
+abstract = {Abstract In this paper we review the traversal algorithms for kd-trees for ray tracing. Ordinary traversal algorithms such as sequential, recursive, and those with neighbour-links have different limitations, which led to several new developments within the last decade. We describe algorithms exploiting ray coherence and algorithms designed with specific hardware architecture limitations such as memory latency and consumption in mind. We also discuss the robustness of traversal algorithms as one issue that has been neglected in previous research.},
+year = {2011}
+}
